Shorten the text that is displayed in the status field so it does not overflow. Fix line height in file list for vertical rhythm.

--- a/views/style.sass
+++ b/views/style.sass
@@ -197,7 +197,8 @@ header
 		@include ell
 		display: block
 		text-decoration: none
-		line-height: 2em
+		line-height: 25px
+		border-bottom: 1px solid transparent
 		padding: 0 .5em
 		color: #000
 		&:hover, &:focus
